Bug 1079672 - Fix -Wpointer-arith warning in GonkAudioDecoderManager.cpp. r=cpearce